[gd_scene load_steps=4 format=3 uid="uid://lud52mnbbu75"]

[ext_resource type="Script" uid="uid://6dvyjxluxpf2" path="res://scripts/light_switch.gd" id="1_rx0ct"]

[sub_resource type="BoxMesh" id="BoxMesh_1hph8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ybral"]
size = Vector3(30, 30, 30)

[node name="LightSwitch" type="Node3D"]
script = ExtResource("1_rx0ct")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
transform = Transform3D(1.21279, 0, 0, 0, 1.98138, 0, 0, 0, 0.377766, 0, 0, 0)
mesh = SubResource("BoxMesh_1hph8")

[node name="DetectionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("BoxShape3D_ybral")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.5482, 0.822379)
pixel_size = 0.04
text = "Press E to toggle"

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
